css/style.css
* {
	margin: 0;
	padding: 0;
}

body {
	color: #5e5e5e;
	background: #f9f9f9;
	font-size: 21px;
	font-family: 'Raleway', sans-serif;
}

p,
li {
	line-height: 180%;
	font-weight: 400;
}

a {
	text-decoration: none;
	font-weight: 700;
	color: #02BFF3;
	transition: all .2s linear;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
}

a:hover, a:active{
	color: #47D6FD;
}

.section{
	clear: both;
}

.main-title{
	font-size: 50px;
	margin-bottom: .5em;
	color: #414141;
}

.social-network-title,
.secondary-title{
	color: #929292;
	font-size: 16px;
	margin-bottom: 1em;
}

.secondary-title{
	font-size: 22px;
}

.social-network-list{
	list-style: none;
}

.social-network-list > li{
	float: left;
	margin-right: 10px;
}

.bio-entry{
	font-size: 16px;
	width: 100%;
	max-width: 515px;
	margin-bottom: 80px;
}

.center-container{
	width: 960px;
	margin: 0 auto;
	padding: 120px 50px 90px;
	box-sizing: border-box;
}

.section-second .center-container{
	padding: 70px 50px;
}

.photo-bg{
	background: url(../img/ramon-victor.png) right bottom no-repeat;
}

.border-top{
	border-top: 1px solid #e9e9e9;
}

.white-bg {
	background: #fff;
}

.articles-list{
	list-style: none;
}

.articles-list > li{
	float: left;
	width: 405px;
	margin-right: 50px;
}

.articles-list > li:last-child{
	margin-right: 0;
}

.article-cta{
	display: block;
	border: 1px solid #e1e1e1;
	overflow: hidden;
	border-radius: 4px;
	background: #fff;
}

.article-cta:hover{
	border-color: #47D6FD;
}

.article-img{
	float: left;
}

.article-title{
	font-size: 16px;
	padding: 20px;
	display: block;
	line-height: 140%;
	overflow: hidden;
}

.group {
	zoom: 1;
}

.group:before, .group:after {
  content: "";
  display: table;
}

.group:after {
	clear: both;
}

@media only screen and (max-device-width: 959px) {
	.center-container{
		width: auto;
	}

	.articles-list > li{
		width: 48%;
		margin-right: 4%;
	}
}

@media only screen and (max-device-width: 735px) {
	.center-container{
		padding: 120px 30px 90px;
	}
	.articles-list > li{
		width: auto;
		float: none;
		margin-bottom: 20px;
		margin-right: 0;
	}
	.photo-bg{
		background-position: 125% bottom;
	}
}

@media only screen and (max-device-width: 540px) and (orientation: portrait) {
	.photo-bg{
		background: none;
	}
}

